[project]
name = "all-in-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "crawl4ai>=0.7.4",
    "docker>=7.1.0",
    "easyocr>=1.7.2",
    "fastapi>=0.121.2",
    "matplotlib>=3.10.6",
    "mcp[cli]>=1.14.1",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "prompt-toolkit>=3.0.52",
    "python-minifier>=3.1.0",
    "python-multipart>=0.0.20",
    "scipy>=1.16.2",
    "serpapi>=0.1.5",
    "spacy>=3.8.7",
    "tavily>=1.1.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
